fix alignment and ul bullet

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@ h3 {
 }
 
 #posts {
-  width: 50%;
   margin: auto;
 }
 
@@ -53,4 +52,6 @@ img {
 #tanooki_suit {
   display: inline-block;
   line-height: 200%;
+  margin-left: auto;
+  margin-right: auto
 }
